Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12706

Failing DCHECK when querying STRUCT inside a STRUCT for Iceberg metadata table

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.4.0
    • None
    • Backend
    • ghx-label-9

    Description

      When querying a STRUCT type inside a STRUCT type there is a failing DCHECK.

      F0111 09:01:35.626691 15777 descriptors.h:366] 83474e353d7baccd:d966f47c00000000] Check failed: slot_desc->col_path().size() == 1 (2 vs. 1)
      

      While the following is working:

      select readable_metrics from functional_parquet.iceberg_query_metadata.data_files;
      

      this fails:

      select readable_metrics.i from functional_parquet.iceberg_query_metadata.data_files;
      

      Attachments

        Issue Links

          Activity

            People

              tmate Tamas Mate
              tmate Tamas Mate
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: